samples/_failures_safe/1761164556_e29033_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8885a3b8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8885a3b8.c:140:9: error: expected declaration or statement at end of input
  140 |         (*token_count)++;
      |         ^
./samples/SAFE/__tmp_8885a3b8.c:140:9: error: expected declaration or statement at end of input
